--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "QR Code Scanner",
     "version": "1.0",
     "description": "Scanning QR codes directly from the browser screen",
-    "permissions": ["activeTab", "scripting"],
+    "permissions": ["activeTab", "scripting", "storage"],
     "action": {
         "default_popup": "popup.html"
     },
